package lowleveldesign.notification;

public enum NotificationType {
    SMS,
    EMAIL,
    PUSH
}
